# csaf-vex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: builder.md  plugins.md
src/csaf_vex/: cli.py
src/csaf_vex/builder/: csafvex.py
src/csaf_vex/models/: common.py  csafvex.py  document.py  product_tree.py  vulnerability.py
src/csaf_vex/validation/: base.py  manager.py
src/csaf_vex/verification/: data_type_checks.py
tests/: conftest.py  test_builder.py  test_data_type_checks.py  test_models.py
tests/test_files/: cve-2023-20593.json
tests/validation/: test_base.py  test_manager.py  test_validator.py
